--- a/app/src/main/res/layout/activity_hotel_owner_registration.xml
+++ b/app/src/main/res/layout/activity_hotel_owner_registration.xml
@@ -152,7 +152,7 @@
             app:layout_constraintVertical_bias="0.0"
             tools:ignore="TextContrastCheck" />
 
-        <EditText
+        <Button
             android:id="@+id/birthdayHotelOwner"
             android:layout_width="@dimen/ButtonWidth"
             android:layout_height="@dimen/ButtonHeight"
@@ -161,6 +161,7 @@
             android:ems="10"
             android:fontFamily="@font/font4"
             android:gravity="center"
+            android:letterSpacing="0"
             android:hint="@string/travelerRegistrationF5"
             android:importantForAutofill="no"
             android:inputType="date"
