--- a/app/src/main/res/layout/activity_tour_guide_registration.xml
+++ b/app/src/main/res/layout/activity_tour_guide_registration.xml
@@ -153,7 +153,7 @@
             app:layout_constraintVertical_bias="0.0"
             tools:ignore="TextContrastCheck" />
 
-        <EditText
+        <Button
             android:id="@+id/birthdayTourGuide"
             android:layout_width="@dimen/ButtonWidth"
             android:layout_height="@dimen/ButtonHeight"
@@ -164,6 +164,7 @@
             android:gravity="center"
             android:hint="@string/travelerRegistrationF5"
             android:importantForAutofill="no"
+            android:letterSpacing="0"
             android:inputType="date"
             android:textColor="@color/edit_text_color"
             android:textSize="20sp"
@@ -178,7 +179,7 @@
             android:id="@+id/passwordTourGuide"
             android:layout_width="@dimen/ButtonWidth"
             android:layout_height="@dimen/ButtonHeight"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="8dp"
             android:background="@drawable/rounded_button"
             android:ems="10"
             android:fontFamily="@font/font4"
