--- a/app/src/main/res/layout/hotel_list_item.xml
+++ b/app/src/main/res/layout/hotel_list_item.xml
@@ -1,70 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/itemParent"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginTop="10dp"
-    android:id="@+id/itemParent">
+    android:layout_marginTop="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:ignore="UselessParent">
 
         <ImageView
             android:id="@+id/hotelImgId"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/ic_launcher_background"/>
+            android:src="@drawable/ic_launcher_background"
+            tools:ignore="ContentDescription" />
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/inputField_color"
             android:paddingStart="16dp"
-            android:paddingEnd="16dp"
             android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            android:background="@color/inputField_color">
+            android:paddingEnd="16dp"
+            android:paddingBottom="15dp">
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_centerVertical="true">
+                android:layout_centerVertical="true"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/hotelName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Jetwing Vil Uyana"
-                android:textStyle="bold"
-                android:textColor="@color/black"
-                android:textSize="18dp"/>
+                <TextView
+                    android:id="@+id/hotelName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/dummy_title"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/hotelCity"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/hotelName"
-                android:text="Sigiriya"
-                android:textColor="@color/black"
-                android:textSize="15sp" />
+                <TextView
+                    android:id="@+id/hotelCity"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/dummy_title"
+                    android:textColor="@color/black"
+                    android:textSize="15sp" />
 
             </LinearLayout>
 
             <Button
+                android:id="@+id/visitHotelBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:background="@drawable/rounded_button"
                 android:paddingStart="45dp"
                 android:paddingEnd="45dp"
-                android:background="@drawable/rounded_button"
-                app:backgroundTint="@color/theme_color"
-                android:text="Visit"
+                android:text="@string/dummy_title"
                 android:textAllCaps="false"
-                android:layout_alignParentEnd="true"
                 android:textSize="18sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                app:backgroundTint="@color/theme_color"
+                tools:ignore="RelativeOverlap" />
 
         </RelativeLayout>
 
