--- a/app/src/main/res/layout-v21/action_bar.xml
+++ b/app/src/main/res/layout-v21/action_bar.xml
@@ -25,11 +25,11 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginStart="40dp"
+            android:layout_marginLeft="40dp"
+            android:text="@string/dummy_title"
             android:textColor="@color/black"
             android:textSize="20sp"
-            android:textStyle="bold"
-            android:layout_marginLeft="40dp"
-            android:text="@string/dummy_title"/>
+            android:textStyle="bold" />
 
     </RelativeLayout>
 
