--- a/app/src/main/res/layout/activity_add_tourist_attraction.xml
+++ b/app/src/main/res/layout/activity_add_tourist_attraction.xml
@@ -18,7 +18,8 @@
             android:id="@+id/button6"
             android:layout_width="375dp"
             android:layout_height="72dp"
-            android:layout_marginTop="65dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="1000dp"
             android:background="@drawable/rounded_button"
             android:fontFamily="@font/font4"
             android:text="@string/uploadImages"
@@ -38,7 +39,8 @@
             android:id="@+id/textView20"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="750dp"
+            android:layout_marginTop="670dp"
+            android:layout_marginBottom="1000dp"
             android:text="@string/maxImages"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -63,7 +65,7 @@
                 android:contentDescription="@string/hotel_img1_desc"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_launcher_background"
-                android:visibility="visible" />
+                android:visibility="gone" />
 
             <ImageView
                 android:id="@+id/placeImg2"
@@ -73,7 +75,7 @@
                 android:contentDescription="@string/hotel_img2_desc"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_launcher_background"
-                android:visibility="visible" />
+                android:visibility="gone" />
 
             <ImageView
                 android:id="@+id/placeImg3"
@@ -83,7 +85,7 @@
                 android:contentDescription="@string/hotel_img3_desc"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_launcher_background"
-                android:visibility="visible" />
+                android:visibility="gone" />
 
             <ImageView
                 android:id="@+id/placeImg4"
@@ -93,7 +95,7 @@
                 android:contentDescription="@string/hotel_img4_desc"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_launcher_background"
-                android:visibility="visible" />
+                android:visibility="gone" />
 
             <ImageView
                 android:id="@+id/placeImg5"
@@ -103,34 +105,33 @@
                 android:contentDescription="@string/hotel_img5_desc"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_launcher_background"
-                android:visibility="visible" />
+                android:visibility="gone" />
 
 
         </LinearLayout>
 
 
-
-    <Button
-        android:id="@+id/button10"
-        android:layout_width="375dp"
-        android:layout_height="72dp"
-        android:layout_marginTop="200dp"
-        android:layout_marginBottom="20dp"
-        android:background="@drawable/rounded_button"
-        android:fontFamily="@font/font4"
-        android:textStyle="bold"
-        android:text="@string/addAttractions"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        android:textSize="35sp"
-        app:backgroundTint="@color/theme_color"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.555"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView19"
-        app:layout_constraintVertical_bias="0.0"
-        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
+        <Button
+            android:id="@+id/button10"
+            android:layout_width="375dp"
+            android:layout_height="72dp"
+            android:layout_marginTop="140dp"
+            android:layout_marginBottom="1000dp"
+            android:background="@drawable/rounded_button"
+            android:fontFamily="@font/font4"
+            android:text="@string/addAttractions"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="35sp"
+            android:textStyle="bold"
+            app:backgroundTint="@color/theme_color"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.555"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView19"
+            app:layout_constraintVertical_bias="0.0"
+            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
 
     <Button
         android:id="@+id/button9"
@@ -150,106 +151,108 @@
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
 
-    <EditText
-        android:id="@+id/textView19"
-        android:layout_width="375dp"
-        android:layout_height="371dp"
-        android:layout_marginStart="-1dp"
-        android:layout_marginTop="360dp"
-        android:layout_marginEnd="1dp"
-        android:background="@drawable/rounded_button_tourist"
-        android:ems="10"
-        android:fontFamily="@font/font6"
-        android:gravity="center_horizontal"
-        android:hint="@string/box4"
-        android:textColor="@color/black"
-        android:importantForAutofill="no"
-        android:inputType="textMultiLine"
-        android:minLines="11"
-        android:textSize="20sp"
-        android:padding="20dp"
-        app:hintEnabled="false"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.527"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />
+        <EditText
+            android:id="@+id/textView19"
+            android:layout_width="375dp"
+            android:layout_height="371dp"
+            android:layout_marginStart="-1dp"
+            android:layout_marginTop="320dp"
+            android:layout_marginEnd="1dp"
+            android:layout_marginBottom="1000dp"
+            android:background="@drawable/rounded_button_tourist"
+            android:ems="10"
+            android:fontFamily="@font/font6"
+            android:gravity="center_horizontal"
+            android:hint="@string/box4"
+            android:importantForAutofill="no"
+            android:inputType="textMultiLine"
+            android:minLines="11"
+            android:padding="20dp"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            app:hintEnabled="false"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.527"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
+            tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />
 
-    <EditText
-        android:id="@+id/textView12"
-        android:textColor="@color/black"
-        android:layout_width="375dp"
-        android:layout_height="72dp"
-        android:layout_marginStart="-1dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="400dp"
-        android:background="@drawable/rounded_button_tourist"
-        android:ems="10"
-        android:fontFamily="@font/font6"
-        android:gravity="center"
-        android:hint="@string/box2"
-        android:importantForAutofill="no"
-        android:inputType="textPersonName"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.472"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.339"
-        tools:ignore="TextContrastCheck" />
+        <EditText
+            android:id="@+id/textView12"
+            android:layout_width="375dp"
+            android:layout_height="72dp"
+            android:layout_marginStart="-1dp"
+            android:layout_marginTop="-360dp"
+            android:layout_marginEnd="1dp"
+            android:layout_marginBottom="700dp"
+            android:background="@drawable/rounded_button_tourist"
+            android:ems="10"
+            android:fontFamily="@font/font6"
+            android:gravity="center"
+            android:hint="@string/box2"
+            android:importantForAutofill="no"
+            android:inputType="textPersonName"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.472"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.339"
+            tools:ignore="TextContrastCheck" />
 
-    <EditText
-        android:id="@+id/textView13"
-        android:textColor="@color/black"
-        android:layout_width="375dp"
-        android:layout_height="72dp"
-        android:layout_marginStart="-1dp"
-        android:layout_marginTop="110dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="230dp"
-        android:background="@drawable/rounded_button_tourist"
-        android:ems="10"
-        android:fontFamily="@font/font6"
-        android:gravity="center"
-        android:hint="@string/box3"
-        android:importantForAutofill="no"
-        android:inputType="textPersonName"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.472"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.266"
-        tools:ignore="TextContrastCheck" />
+        <EditText
+            android:id="@+id/textView13"
+            android:layout_width="375dp"
+            android:layout_height="72dp"
+            android:layout_marginStart="-1dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="1dp"
+            android:layout_marginBottom="1000dp"
+            android:background="@drawable/rounded_button_tourist"
+            android:ems="10"
+            android:fontFamily="@font/font6"
+            android:gravity="center"
+            android:hint="@string/box3"
+            android:importantForAutofill="no"
+            android:inputType="textPersonName"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.472"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.266"
+            tools:ignore="TextContrastCheck" />
 
-    <EditText
-        android:id="@+id/textView11"
-        android:textColor="@color/black"
-        android:layout_width="375dp"
-        android:layout_height="72dp"
-        android:layout_marginStart="-1dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="700dp"
-        android:background="@drawable/rounded_button_tourist"
-        android:ems="10"
-        android:fontFamily="@font/font6"
-        android:gravity="center"
-        android:hint="@string/box1name"
-        android:importantForAutofill="no"
-        android:inputType="textPersonName"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.527"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.397"
-        tools:ignore="TextContrastCheck" />
+        <EditText
+            android:id="@+id/textView11"
+            android:layout_width="375dp"
+            android:layout_height="72dp"
+            android:layout_marginStart="-1dp"
+            android:layout_marginTop="-440dp"
+            android:layout_marginEnd="1dp"
+            android:layout_marginBottom="1000dp"
+            android:background="@drawable/rounded_button_tourist"
+            android:ems="10"
+            android:fontFamily="@font/font6"
+            android:gravity="center"
+            android:hint="@string/box1name"
+            android:importantForAutofill="no"
+            android:inputType="textPersonName"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.527"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.397"
+            tools:ignore="TextContrastCheck" />
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar4"
