--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,7 @@
     <color name="inputField_color">#D6FBE9</color>
     <color name="inputText_color">#9E9E9E</color>
     <color name="menu_background">#E5E5E5</color>
+    <color name="theme_colour">#4FDB98</color>
+    <color name="green">#D6FBE9</color>
+    <color name="red">#FF0707</color>
 </resources>
