--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -27,6 +27,14 @@
         <item name="chipBackgroundColor">@color/chip_background_color</item>
     </style>
 
+        <!--Kavindu Chip Style-->
+    <style name="custom_chip_style" parent="Widget.MaterialComponents.Chip.Choice">
+
+        <item name="chipBackgroundColor">@color/chip_background_colour</item>
+    </style>
+
+    <!--End Chip Styles-->
+
 
 
 
