adding fully completed hotel owner all and main views + style enhancements

--- a/app/src/main/res/layout/activity_hotel_owner_main_view.xml
+++ b/app/src/main/res/layout/activity_hotel_owner_main_view.xml
@@ -23,26 +23,22 @@
     </com.google.android.material.navigation.NavigationView>
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
         <include
             android:id="@+id/home_action_bar"
-            layout="@layout/main_action_bar" />
+            layout="@layout/main_action_bar"/>
 
-        <TextView
-            android:id="@+id/text"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/hotelsRecViewOwner"
+            android:layout_below="@+id/home_action_bar"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_height="match_parent"
+            android:layout_centerHorizontal="true"/>
 
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </RelativeLayout>
 
 
 
